--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
                     <li class="services">
                         <a href="/">Сторінки:</a>
                         <ul class="dropdown">
-                            <li><a href="/index.html">Сторінка 1 </a></li>
-                            <li><a href="/page2.html">Сторінка 2</a></li>
-                            <li><a href="/page3.html">Сторінка 3</a></li>
-                            <li><a href="/page4.html">Сторінка 4</a></li>
-                            <li><a href="/page5.html">Сторінка 5</a></li>
-                            <li><a href="/page6.html">Сторінка 6</a></li>
-                            <li><a href="/page7.html">Сторінка 7</a></li>
-                            <li><a href="/page8.html">Сторінка 8</a></li>
-                            <li><a href="/page9.html">Сторінка 9</a></li>
-                        </ul>
+                        <li><a href="index.html">Сторінка 1 </a></li>
+                        <li><a href="page2.html">Сторінка 2</a></li>
+                        <li><a href="page3.html">Сторінка 3</a></li>
+                        <li><a href="page4.html">Сторінка 4</a></li>
+                        <li><a href="page5.html">Сторінка 5</a></li>
+                        <li><a href="page6.html">Сторінка 6</a></li>
+                        <li><a href="page7.html">Сторінка 7</a></li>
+                        <li><a href="page8.html">Сторінка 8</a></li>
+                        <li><a href="page9.html">Сторінка 9</a></li>
+                    </ul>
                     </li>
                     <li><a href="index.html#contacts">Контакти</a></li>
                 </div>
