--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <div class="delete3">Навігація</div>
             <ul class="nav-links">
                 <div class="menu">
-                    <li><a href="/index.html">Головна</a></li>
-                    <li><a href="/index.html#more">Більше</a></li>
+                    <li><a href="index.html">Головна</a></li>
+                    <li><a href="index.html#more">Більше</a></li>
                     <li class="services">
-                        <a href="/">Сторінки:</a>
+                        <a>Сторінки:</a>
                         <ul class="dropdown">
                         <li><a href="index.html">Сторінка 1 </a></li>
                         <li><a href="page2.html">Сторінка 2</a></li>
